--- a/style.css
+++ b/style.css
@@ -88,3 +88,79 @@ body{
 .Para1 p{
     margin-top: 12px;
 }
+
+.item4{
+    margin: 20px;
+    /* border: ; */
+    float: left;
+    width: 350px;
+}
+
+.item4 img{
+    width: 100%;
+    height: auto;
+}
+
+.item5{
+    margin: 20px;
+    /* border: ; */
+    float: left;
+    width: 350px;
+}
+
+.item5 img{
+    width: 100%;
+    height: auto;
+}
+
+.item6{
+    margin: 20px;
+    /* border: ; */
+    float: left;
+    width: 350px;
+}
+
+.item6 img{
+    width: 100%;
+    height: auto;
+}
+
+.item7{
+    margin: 20px;
+    /* border: ; */
+    float: left;
+    width: 350px;
+}
+
+.item7 img{
+    width: 100%;
+    height: auto;
+}
+
+.item8{
+    margin: 20px;
+    /* border: ; */
+    float: left;
+    width: 350px;
+}
+
+.item8 img{
+    width: 100%;
+    height: auto;
+}
+
+.item9{
+    margin: 20px;
+    /* border: ; */
+    float: left;
+    width: 350px;
+}
+
+.item9 img{
+    width: 100%;
+    height: auto;
+}
+.description{
+    padding: 15px;
+    text-align: left;
+}
