--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
     width: auto;
     height: auto;
     font-family: inter;
@@ -9,8 +10,8 @@ body{
 }
 
 .container{
-    width: 1500px;
-    height: 500px;
+    width: auto;
+    height: auto;
     display: flex;
     justify-content: center;
     justify-items: center;
@@ -26,43 +27,57 @@ body{
 }
 
 .content h6{
-    font-size: 10px;
-    font-weight: 600;
+    font-size: 17px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
     color: #7f56d9;
-    margin-bottom: 15px;
+    margin-block-start: 2rem;
+    margin-block-end: 1rem;
 }
 
   
 .content h1 {
-    font-size: 48px;
-    line-height: 60px;
+    font-size: 43px;
+    font-family: 'Open Sans', sans-serif;
     color: #000000;
+    font-weight: 600;
+    margin-block-start: 0rem;
 }
   
 .content p {
     font-size: 20px;
+    font-family: 'Open Sans', sans-serif;
     line-height: 25px;
     color: #7b88a5;
 }
 
-.Srch-box{
-    margin-left: 100px;
-}
-  
-.Srch-box input{
-    width: 360px;
-    height: 48px;
-    border: 1px #D0D5DD solid;
-    border-radius: 8px;
-    padding: 0px 15px;
-    margin-left: -50px;
+.srch-box input{
+    font-family: 'Open Sans', sans-serif;
+    display: block;
+    width: 50%;
+    padding: 0.4375rem 0.875rem;
+    font-size: 0.9375rem;
+    font-weight: 400;
+    line-height: 1;
+    height: 50px;
+    color: #000000;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #7b88a5;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.375rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    
 }
 
-.Srch-box button{
+.srch-box button{
     text-decoration: none;
     background-color: #7f56d9;
     border: none;
-    border-radius: 8px;
+    border-radius: 5px;
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     color: white;
     width: 118px;
@@ -70,21 +85,189 @@ body{
     margin-left: 10px;
 }
 
-
-.Para1{
+.form-group {
     display: flex;
-    flex-direction: row;
-    font-size: 20px;
-    margin-left: 74px;
+    align-items: center;
+    justify-content: center;
+}
+
+.sub-title {
+    font-weight: 700;
 }
 
 
-.Para1 a{
+.para1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+}
+
+
+.para1 a{
      margin: 12px 0px 0px 6px; 
-    color: #667085;
+    color: #7b88a5;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+
+}
+
+.privacy-text {
+    font-size: 15px!important;   
+}
+
+.blog-body {
+    padding: 10px;
+    font-family: 'Open Sans', sans-serif;
 
 }
 
 .Para1 p{
     margin-top: 12px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.blog-title {
+    font-size: 25px!important;
+    color: #000000;
+    font-weight: bolder;
+    padding-top: 10px;
+}
+
+.side-title {
+    font-size: 15px!important;
+    color: #000000;
+    font-weight: bolder;
+    padding-top: 10px;
+}
+
+.new-title {
+    font-size: 22px!important;
+    color: #000000;
+    font-weight: bolder;
+    padding-top: 10px;
+}
+
+
+.blog-desc {
+    font-size: 14px!important;
+    color: #7b88a5;
+    font-weight: 600px;
+}
+
+.blog-date {
+    color:#7f56d9; 
+    font-weight: 600;
+}
+
+.blog-inner {
+    padding-top: 10px;
+}
+
+  .badge-primary {
+    background-color: #7f56d946!important;
+    color: #7f56d9!important;
+    font-weight: bold!important;
+}
+
+.badge-secondary {
+    background-color: #0037ff25!important;
+    color: #5100ff!important;
+    font-weight: bold!important;
+}
+
+.badge-tertiary {
+    background-color: #e90c3121!important;
+    color: #e90c31!important;
+    font-weight: bold!important;
+}
+
+.badge-overview {
+    background-color: #086e191a!important;
+    color: #086e19!important;
+    font-weight: bold!important;
+}
+
+.blog-cat {
+    display: flex;
+    padding-bottom: 10px!important;
+}
+
+.blog-cat a {
+    margin-right: 15px;
+}
+
+.item2 {
+    margin-top: 15px;
+}
+
+.item3 {
+    margin-top: 15px;
+}
+
+.img-left {
+    width :100%;
+    height :50%;
+    margin-right: 20px;
+}
+
+.title-seperate {
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width: 767px) {
+.img-blog {
+    width: 100%;
+}
+}
+
+@media (min-width: 1024px) {
+    .privacy-text {
+        
+        margin-left: -200px;
+    }
+
+    .blog-body {
+        padding: 70px;
+        padding-top: 5px;
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    .item2 {
+        display: flex;
+        margin-top: 0px;
+        justify-content: space-between;
+    }
+
+    .item3 {
+        display: flex;
+        margin-top: 20px;
+        justify-content: space-between;
+    }
+
+    .sub-title {
+        margin-top: 50px;
+    }
+
+    .row {
+        justify-content: space-between;
+    }
+
+    .row-with-space [class^="col-"] {
+        margin-right: 2px!important;
+      }
+    
+      .row-with-space [class^="col-"]:last-child {
+        margin-right: 0;
+      }
+
+      .col-lg-4 {
+        -ms-flex: 0 0 30%!important;
+        flex: 0 0 30%!important;
+        max-width: 30%!important;
+    }
+    .blog-cat {
+        padding-bottom: 10px!important;
+    }
 }
