--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 .container{
     width: auto;
     height: auto;
-    display: flex;
+    display: flex!important;
     justify-content: center;
     justify-items: center;
 }
